# fastfetch-theme-manager

./: CONTRIBUTING.md  README.md  ftm.py  install.sh  pyproject.toml
absolute art/: ascii-art (1).txt  ascii-art (2).txt  ascii-art (4).txt  ascii-art.txt
src/ftm/: __init__.py  __main__.py  builder.py  cli.py  config.py  detection.py  fastfetch_version.py  manager.py  moduledb.py  picker.py  style.py  themes.py  utils.py
tests/: test_detection.py  test_fastfetch_version.py  test_moduledb.py
themes/: ascii-art-1.jsonc  ascii-art-2.jsonc  ascii-art-3.jsonc  ascii-art-4.jsonc  ascii-art-5.jsonc  ascii-art.jsonc
themes/images/: ascii-art (3).txt  ascii-art (5).txt
