[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fastfetch-theme-manager"
version = "3.0.0"
description = "Professional CLI Theme Management for Fastfetch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tasavvuf Gori"},
]
requires-python = ">=3.8"
keywords = ["fastfetch", "theme", "cli", "system-info"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/itz-dev-tasavvuf/fastfetch-theme-manager"
Repository = "https://github.com/itz-dev-tasavvuf/fastfetch-theme-manager"

[project.scripts]
ftm = "ftm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
